fixed layout bugs #3

--- a/src/components/buyPopup/buyPopup.scss
+++ b/src/components/buyPopup/buyPopup.scss
@@ -202,7 +202,7 @@
     .purchase {
         border-radius: 30px;
         padding: 24px;
-        width: 72vw;
+        width: 80vw;
 
         &__title {
             font-size: 24px;
@@ -214,7 +214,7 @@
             }
 
             &-input {
-                font-size: 14px;
+                font-size: 12px;
             }
 
             &-price {
