--- a/src/index.scss
+++ b/src/index.scss
@@ -735,7 +735,7 @@ a {
 	.discount {
 		&__input {
 			font-size: 15px;
-			width: 215px;
+			width: 200px;
 
 			&-label {
 				height: 42px;
