--- a/src/pages/rootPage/rootPage.scss
+++ b/src/pages/rootPage/rootPage.scss
@@ -561,7 +561,7 @@
 
         &__discount {
             position: absolute;
-            top: 300px;
+            top: 320px;
         }
     }
 }
